# rust-robot-dreams

./: .gitignore  Cargo.toml
.trunk/: trunk.yaml
lesson1/: Cargo.toml  README.md
lesson11/: Cargo.toml
lesson11/crates/client/src/: client.rs
lesson11/crates/server/: Cargo.toml
lesson11/crates/server/src/: server.rs
lesson11/crates/utils/: Cargo.toml
lesson11/crates/utils/src/: utils.rs  write_utils.rs
lesson11/src/: client.rs  server.rs
lesson11/testing/connection2/src/: client.rs
lesson11/testing/server/src/: utils.rs
lesson15/: Cargo.toml  README.md  chat.db  diesel.toml
lesson15/crates/server/: Cargo.toml
lesson15/crates/server/src/: db.rs  lib.rs  server.rs
lesson15/crates/server/src/db/: errors.rs  schema.rs
lesson16/: Cargo.toml  chat.db
lesson17/: Cargo.toml  README.md  chat.db  error_types.ts  hovno.rs  index.html
lesson17/_app/: version.json
lesson17/_app/immutable/assets/: _layout.BNwyQf6R.css
lesson17/_app/immutable/chunks/: entry.hQWnAVDG.js  index.4KFJALzH.js  index.BfJRF2fs.js  scheduler.Dv2ooU3e.js
lesson17/_app/immutable/entry/: app.CdBKxRIy.js  start.CK-1l_PB.js
lesson17/_app/immutable/nodes/: 0.CAYaj9gv.js  1.CSmwyPgL.js  2.Oc9W39Ru.js
lesson17/crates/client/: Cargo.toml
lesson17/crates/client/src/: client.rs
lesson17/crates/init_macros/: Cargo.toml
lesson17/crates/server/: Cargo.toml
lesson17/crates/server/src/: server.rs
lesson17/crates/utils/: Cargo.toml
lesson17/crates/utils/src/: db.rs  utils.rs  write_utils.rs
lesson17/crates/utils/src/utils/: structs.rs
lesson17/frontend-sveltekit/: bun.lockb  package-lock.json  package.json  tailwind.config.js
lesson17/frontend-sveltekit/src/lib/: socket.ts  types.ts
lesson17/frontend-sveltekit/src/lib/components/: Chat.svelte  Connect.svelte  Login.svelte
lesson17/frontend-sveltekit/src/lib/utils/: index.ts  socket.ts  types.ts
lesson17/frontend-sveltekit/src/routes/: +layout.svelte  +page.svelte
lesson17/migrations/2024-06-21-125426_mig/: up.sql
lesson17/src/: main.rs  server.rs
lesson6/: Cargo.toml
lesson9/testing/server/: Cargo.toml
lesson9/testing/server/src/: server.rs  utils.rs  write_utils.rs
(+58 files in other folders)
