[package]
name = "lesson11"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
utils = { path = "./crates/utils" }
client = { path = "./crates/client" }
server = { path = "./crates/server" }
