[package]
name = "lesson16"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"



[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
utils = { path = "./crates/utils" }
client = { path = "./crates/client" }
server = { path = "./crates/server" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
