[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = {path="../utils"}
tokio = { version = "1.37.0", features = ["full"] }
diesel = {version = "2.2.1", features = ["sqlite", "r2d2"]}
bcrypt = "0.15"
rand = "0.8.5"
thiserror = "1.0"
anyhow = "1.0"
jsonwebtoken="9.3.0"
serde = "1.0"
bincode="1.3.3"