[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
image = "0.25.1"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0"
diesel = {version = "2.2.1", features = ["sqlite", "r2d2"]}
anyhow = "1.0.86"
bcrypt = "0.15"
rand = "0.8.5"
paste = "1.0.5"
init_macros = {path="../init_macros"}