[package]
name = "lesson9"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
futures = "0.3.30"
image = "0.25.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
